--- a/app/views/shared/_google_analytics.html.haml
+++ b/app/views/shared/_google_analytics.html.haml
@@ -1,6 +1,6 @@
 :javascript
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', '#{@site.ga_code}']);
+  _gaq.push(['_setAccount', '#{ga_tracker_id}']);
   _gaq.push(['_trackPageview']);
   _gaq.push(['_setDomainName', '#{@site.ga_domain}']);
 
