Minor style updates for sharing widget.

--- a/app/assets/stylesheets/_videos.sass
+++ b/app/assets/stylesheets/_videos.sass
@@ -281,7 +281,9 @@
   #title-bar
     margin-bottom: 10px
     .share
-      top: 34%
+      top: 20px
+    .share_panel
+      top: 76px
 
   article .inner
     padding-top: 0
