--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -93,7 +93,7 @@
           if(videoStarted == false) {
             trackVideoEvent( function() {
               //_gaq.push(['_trackEvent', '#{videoRefId}' , 'domain', 'YouVersion', 0]); //async style
-              tracker._trackEvent( '#{videoRefId}', 'domain', 'YouVersion', 0 );
+              //tracker._trackEvent( '#{videoRefId}', 'domain', 'YouVersion', 0 );
             });
             videoStarted = true;
           }
@@ -107,14 +107,11 @@
 
         jwplayer().onComplete( function(event) {
 
-          trackVideoEvent( function() {
-            //_gaq.push(['_trackEvent', '#{videoRefId}' , 'mediaViewTime', playTimes.total() , 0]); //async style
-            tracker._trackEvent( '#{videoRefId}', 'mediaViewTime', playTimes.total() , 0 );
-          });
+          playTimes.push({start: startTime, end: jwplayer().getPosition()})
 
-          var timestamp = Math.round((new Date()).getTime() / 1000);
           trackVideoEvent( function() {
-            //_gaq.push(['_trackEvent', '#{videoRefId}' , 'mediaComplete', timestamp , 0]); //async style
+            tracker._trackEvent( '#{videoRefId}', 'domain', 'YouVersion', 0 );
+            tracker._trackEvent( '#{videoRefId}', 'mediaViewTime', playTimes.total() , 0 );
             tracker._trackEvent( '#{videoRefId}', 'mediaComplete', timestamp , 0 );
           });
 
