--- a/app/views/videos/publisher.html.haml
+++ b/app/views/videos/publisher.html.haml
@@ -1,4 +1,6 @@
 - html_attributes(id:"video-publisher")
+- @title = @publisher.name
+
 - content_for :sidebar do
   = render partial: "sidebars/videos/publisher", locals: {video: @video, publisher: @publisher}
 
