--- a/app/views/videos/series.html.haml
+++ b/app/views/videos/series.html.haml
@@ -1,6 +1,7 @@
 - html_attributes(id: "video-series",classes:"videos")
 - publisher  = @video.publisher
 - @sidebar = false
+- @title = @video.title
 
 %article{ style: "background-image: url('#{@video.hero_image.url}')"}
   #title-bar
