--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -14,7 +14,7 @@
 
   = stylesheet_link_tag 'application'
   = stylesheet_link_tag 'wysiwyg/jquery.wysiwyg.css'
-  = javascript_include_tag "/jw/jwplayer.js"
+  = javascript_include_tag "/assets/jw/jwplayer.js"
   %script jwplayer.key="y1ZTdCD+8TKgQ3UfLyFkfiiKoA8DTT4nuuZ8R2J6b91kCGbT4pu19TDHIAg="
 
 
