--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -94,7 +94,7 @@
           %span.counter#download-counter
             %p &nbsp;
             %p= t(".world installs")
-        %div
+        %div.mobile_platforms
           = link_to(t(".download action"), 'http://youversion.com/download')
 
 - content_for :javascripts do
