--- a/app/views/sidebars/plans/_sample.html.haml
+++ b/app/views/sidebars/plans/_sample.html.haml
@@ -41,10 +41,10 @@
         - reading.references.each_with_index do |ref,index|
           %li.content_target{class: (content_page == index) ? "active #{content_page}" : nil }
             - if content_page == index
-              %span= ref.ref.human
+              %span= ref.ref.safe_human
             - else
               %a{href: sample_plan_path(plan.to_param , day: day.to_s, content: (index > 0 ? index.to_s : nil), version: params[:version])}
-                = ref.ref.human
+                = ref.ref.safe_human
 
 - if reading.devotional
   .widget
