Added bible series promo banner.

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -346,6 +346,19 @@ p
   margin: 0px
   width: 980px
 
+// ----------------------- Bible series promo ------------------------------------
+
+.bs-promo
+  position: absolute
+  top: 10px
+  left: 62%
+  height: 210px
+  width: 212px
+  background: image-url("bs-splash-promo.png") top center no-repeat
+  text-indent: 100%
+  white-space: nowrap
+  overflow: hidden
+
 // ----------------------------------- Media queries -----------------------------------
 
 @media only screen and (max-width: 480px)
@@ -553,7 +566,7 @@ p
         div
           float: none
           height: 100px
-          
+
           div
             width: 100%
 
@@ -613,9 +626,14 @@ p
   .mobile-add
     display: block
 
-#footer
-  margin-top: 10px
-  width: auto
+  #footer
+    margin-top: 10px
+    width: auto
+
+  // ----------------------- Bible series promo ------------------------------------
+
+  .bs-promo
+    display: none
 
 @media only screen and (min-width: 481px)
   #main article .bottom_cta div:first-child p
