--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -32,6 +32,9 @@
               var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
               po.src = 'https://apis.google.com/js/plusone.js';
               var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+    .bs-promo
+      %p
+        Jesus is coming to The Bible series this week. Tune in to The History Channel, 8/7c.
     .hero_pics
       &nbsp;
     %ul
