Fixing missing url helpers, route for subscription sidebar, title issue on references#show.

--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -4,7 +4,7 @@
 - @reference      = @presenter.reference
 - @alt_reference  = @presenter.alt_reference
 
-- @title = @presenter.title
+- @title = "#{@reference.human} #{@reference.version_string}"
 - @is_reader = true
 - @canonical = bible_url(@reference)
 - @html_classes = []
